--- a/naive_bays_bag_of_words_baseline.ipynb
+++ b/naive_bays_bag_of_words_baseline.ipynb
@@ -350,83 +350,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3471    'I broke the windshield.  With my foot.  When ...\n",
-       "5765    'From the place of the collective unconscious,...\n",
-       "8486    'Me.  For me i will attempt to take interest i...\n",
-       "1675    'Great! I sent you a challenge. :)I'm a marrie...\n",
-       "4270    'Heart of Darkness On the RoadI like to use pa...\n",
-       "7075    '29 out of 36 as well.  Which is actually rema...\n",
-       "1484    'I do love to stumble upon fascinating connect...\n",
-       "4548    'From my experience this is very common with N...\n",
-       "7968    'Dear $MBTI$,   I don't like how you feel the ...\n",
-       "977     '4, 22, 31, 34, 37, 42, 54, 64, 72, 84  17 is ...\n",
-       "5128    'calm pleasant  soothing relaxing soft gentle ...\n",
-       "5558    'Ti - Ni - Te - Ne - Se - Si - Fi - Fe  If we ...\n",
-       "5043    'House is more of our goal. There, apparently,...\n",
-       "4306    'The first, no doubt. Explaining why is somewh...\n",
-       "7555    'That happens to me all the time, most annoyin...\n",
-       "8190    'This got a little bit off-topic but I don't m...\n",
-       "3809    'I dunno, I mean, where are their egos, LOL? C...\n",
-       "5630    'jamiebond Ok, cool!  Waiting Aha yep, but at ...\n",
-       "6075    'BRAND NEW. HOLY CRAP BRAND NEWWWWWW ; A;  + B...\n",
-       "7842    'Game developing/ degree in literature not an ...\n",
-       "8519    'Nah I'm like 5'7/5'8, I wasn't emotional when...\n",
-       "7293    'I love your blog! So many moody purples and b...\n",
-       "182     'What are you? A weakling? You're just going t...\n",
-       "724     'In any no specific order some of my favorites...\n",
-       "3379    'I tend to be attracted to whats familiar, I w...\n",
-       "4003    'Im a little of being in a $MBTI$ forum but i ...\n",
-       "3430    '$LINK$:D We adore you too!My favorite type of...\n",
-       "910     'More dead than before.  This place used to be...\n",
-       "8384    '$MBTI$ and I got *drumroll* Neutral Good! Who...\n",
-       "3947    'My sense of humor is a lot of play on words, ...\n",
-       "                              ...                        \n",
-       "504     'I can understand the irritability that comes ...\n",
-       "8203    'With $MBTI$s I feel that strong sense of attr...\n",
-       "7348    'I think you're assuming I didn't want honesty...\n",
-       "6325    'When I was in first grade, I punched a guy fo...\n",
-       "5924    'I'm kind of a month too late for this fight, ...\n",
-       "7657    'I would judge it based on whether you use mor...\n",
-       "5148    Inspired by a recent book club thread here on ...\n",
-       "3085    'we are all in the same boat, we have a connec...\n",
-       "1597    'Recently watched Fantastic Beasts and Where t...\n",
-       "7560    'Have you ever watched a television show, movi...\n",
-       "8127    'I've never come across an $MBTI$ IRL, so I co...\n",
-       "4793    'I honestly think PerC's debate/current events...\n",
-       "1823    'Great empires crumble in to the sea , and are...\n",
-       "3593    'Yes$LINK$Couldn't have happened to a nicer gu...\n",
-       "2040    Yeah, this happens to me with relatives and so...\n",
-       "5246    I'm sorry, let me rectify.You wont find anyone...\n",
-       "2121    DarlingWildflower Welcome to PerC!I'm not sure...\n",
-       "5268    'Hello there! Welcome to PerC :proud:I can't f...\n",
-       "6268    'Thinking about transgender stuff...  It's har...\n",
-       "8482    'After several years of studying socionics, i ...\n",
-       "7282    'For me nihilism is a starting point to filter...\n",
-       "8505    'I can relate to this. $MBTI$s are great, but ...\n",
-       "1684    'But, how does it make you, as an $MBTI$, feel...\n",
-       "5638    'HOW TO ADD YOURSELF TO THE LIST:   Please use...\n",
-       "5131    'Unpredictability can be interesting.   Unrela...\n",
-       "8301    'I happen to be a helicopter mechanic, but whe...\n",
-       "109     'How is that even anatomically possible?Uhhh, ...\n",
-       "3654    'Honestly, I'm up in the air about this one. I...\n",
-       "8202    This is how I pretty much saw it as well. His ...\n",
-       "1474    'Yes, it does.  Makes sense.  And that's why S...\n",
-       "Name: posts, Length: 1735, dtype: object"
+       "(1735,)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dev_ft['posts']"
+    "predicted_pj.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frequency of unique values of the said array:\n",
+      "[['E' 'I']\n",
+      " ['42' '1693']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_elements, counts_elements = np.unique(predicted_ie, return_counts=True)\n",
+    "print(\"Frequency of unique values of the said array:\")\n",
+    "print(np.asarray((unique_elements, counts_elements)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I    6676\n",
+      "E    1999\n",
+      "Name: IE, dtype: int64\n",
+      "N    7478\n",
+      "S    1197\n",
+      "Name: NS, dtype: int64\n",
+      "F    4694\n",
+      "T    3981\n",
+      "Name: FT, dtype: int64\n",
+      "P    5241\n",
+      "J    3434\n",
+      "Name: PJ, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['IE'].value_counts())\n",
+    "print(df['NS'].value_counts())\n",
+    "print(df['FT'].value_counts())\n",
+    "print(df['PJ'].value_counts())\n"
    ]
   },
   {
