tested pronoun features

--- a/first_second_third_person_svm.ipynb
+++ b/first_second_third_person_svm.ipynb
@@ -249,17 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "downsize_factor_ie = sum(train_ie['IE'] == 'E')/len(train_ie['IE'])\n",
-    "train_weights_ie = [1 if ie == 'E' else downsize_factor_ie for ie in train_ie['IE']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +337,7 @@
        "Name: posts, Length: 5205, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,13 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# first-person features: I, me, my, us, we, mine, our, I'm\n",
     "# two person: you, your, you're, you've\n",
     "# third person: he, him, she, her, they, them, their, his\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "\n",
     "\n",
     "class FirstPersonExtractor():\n",
     "    \"\"\"Takes in dataframe, extracts road name column, outputs average word length\"\"\"\n",
@@ -483,41 +483,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class test():\n",
+    "class count_vec():\n",
     "    def __init__(self):\n",
-    "        self.count = CountVectorizer()\n",
+    "        self.count = CountVectorizer(ngram_range = (1, 2))\n",
     "    def transform(self, data):\n",
     "        print(\"yah\")\n",
     "        return self.count.transform(data)\n",
     "    def fit(self, data, labels):\n",
     "        self.count.fit(data)\n",
-    "        return self\n",
-    "combined_features = FeatureUnion([(\"test\", test())])\n",
-    "\n",
-    "\n",
-    "# text_clf = Pipeline([('features', combined_features), ('clf', MultinomialNB())])"
+    "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AvgLengthDeviation():\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def average_post_length(self, post):\n",
+    "        \"\"\"Helper code to compute average word length of a post\"\"\"\n",
+    "        return round(len(post.split()))\n",
+    "\n",
+    "    def transform(self, df, y=None):\n",
+    "        \"\"\"The workhorse of this feature extractor\"\"\"\n",
+    "        deviations = []\n",
+    "        for posts in df:\n",
+    "            avg = np.mean([len(post.split()) for post in posts.split(\"|||\") if post != \"\"])\n",
+    "            deviations.append([avg - self.avgs[0], avg - self.avgs[1]])\n",
+    "\n",
+    "    def fit(self, df, y=None):\n",
+    "        \"\"\"Calculates average post length for each class\"\"\"\n",
+    "        labels = list(np.unique(y))\n",
+    "        avgs = [0, 0]\n",
+    "        labelCounts = [0, 0]\n",
+    "        for (posts, userLabel) in zip(df, y):\n",
+    "            avgs[labels.index(userLabel)] += np.mean([len(post.split()) for post in posts.split(\"|||\") if post != \"\"])\n",
+    "            labelCounts[labels.index(userLabel)] += 1\n",
+    "\n",
+    "        avgs[0],avgs[1] = avgs[0] / labelCounts[0], avgs[1] / labelCounts[1]\n",
+    "        self.avgs = avgs\n",
+    "        self.labels = labels\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "pipeline = Pipeline([\n",
     "    ('feats', FeatureUnion([\n",
-    "        ('avg_len', AverageWordLengthExtractor()),\n",
+    "        ('avg_len', AvgLengthDeviation()),\n",
     "        ('first_per', FirstPersonExtractor()),\n",
     "        ('second_per', SecondPersonExtractor()),\n",
     "        ('third_per', ThirdPersonExtractor()),\n",
-    "        ('test', test())\n",
+    "        ('count_vec', count_vec())\n",
     "    ])),\n",
     "    ('clf', SVC())\n",
     "])"
@@ -527,66 +559,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/BrandonLiu/anaconda3/envs/nlu/lib/python3.6/site-packages/ipykernel_launcher.py:16: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "yah\n",
-      "<class 'pandas.core.series.Series'>\n",
       "yah\n",
-      "IE accuracy 0.24092219020172911\n",
-      "fitting\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/BrandonLiu/anaconda3/envs/nlu/lib/python3.6/site-packages/ipykernel_launcher.py:16: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "IE accuracy 0.2403458213256484\n",
       "yah\n",
-      "NS accuracy 0.0\n",
-      "fitting\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/BrandonLiu/anaconda3/envs/nlu/lib/python3.6/site-packages/ipykernel_launcher.py:16: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yah\n"
+      "yah\n",
+      "NS accuracy 0.12219020172910663\n",
+      "yah\n",
+      "yah\n",
+      "FT accuracy 0.4634005763688761\n",
+      "yah\n",
+      "yah\n",
+      "PJ accuracy 0.38962536023054756\n"
      ]
     }
    ],
@@ -610,264 +606,16 @@
     "print(\"IE accuracy\", np.mean(predicted_ie == dev_ie['IE']))\n",
     "\n",
     "pipeline.fit(train_ns['posts'], train_ns['NS'], **{'clf__sample_weight': train_weights_ns})  \n",
-    "predicted_ns = text_clf.predict(dev_ns['posts'])\n",
+    "predicted_ns = pipeline.predict(dev_ns['posts'])\n",
     "print(\"NS accuracy\", np.mean(predicted_ns == dev_ns['NS']))\n",
     "\n",
     "pipeline.fit(train_ft['posts'], train_ft['FT'], **{'clf__sample_weight': train_weights_ft})  \n",
-    "predicted_ft = text_clf.predict(dev_ft['posts'])\n",
+    "predicted_ft = pipeline.predict(dev_ft['posts'])\n",
     "print(\"FT accuracy\", np.mean(predicted_ft == dev_ft['FT']))\n",
     "\n",
     "pipeline.fit(train_pj['posts'], train_pj['PJ'], **{'clf__sample_weight': train_weights_pj})  \n",
-    "predicted_pj = text_clf.predict(dev_pj['posts'])\n",
-    "print(\"PJ accuracy\", np.mean(predicted_pj == dev_pj['PJ']))\n",
-    "\n",
-    "from sklearn.metrics import f1_score\n",
-    "print(\"f1 score IE\")\n",
-    "f1_score(dev_ie['IE'], predicted_ie, labels=['I', 'E'], average=None)\n",
-    "\n",
-    "print(\"f1 score NS\")\n",
-    "f1_score(dev_ns['NS'], predicted_ns, labels=['N', 'S'], average=None)\n",
-    "\n",
-    "print(\"f1 score FT\")\n",
-    "f1_score(dev_ft['FT'], predicted_ft, labels=['F', 'T'], average=None)\n",
-    "\n",
-    "print(\"f1 score PJ\")\n",
-    "f1_score(dev_pj['PJ'], predicted_pj, labels=['P', 'J'], average=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1 score IE\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.0015163 , 0.38772664])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import f1_score\n",
-    "print(\"f1 score IE\")\n",
-    "\n",
-    "f1_score(dev_ie['IE'], predicted_ie, labels=['I', 'E'], average=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downsize_factor_ns = sum(train_ns['NS'] == 'S')/len(train_ns['NS'])\n",
-    "train_weights_ns = [1 if ns == 'S' else downsize_factor_ns for ns in train_ns['NS']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6968299711815562"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_clf = Pipeline([('vect', CountVectorizer()), ('clf', MultinomialNB())])\n",
-    "text_clf.fit(train_ns['posts'], train_ns['NS'], **{'clf__sample_weight': train_weights_ns})  \n",
-    "predicted_ns = text_clf.predict(dev_ns['posts'])\n",
-    "np.mean(predicted_ns == dev_ns['NS'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1 score NS\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.8       , 0.37380952])"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"f1 score NS\")\n",
-    "f1_score(dev_ns['NS'], predicted_ns, labels=['N', 'S'], average=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downsize_factor_ft = sum(train_ft['FT'] == 'T')/len(train_ft['FT'])\n",
-    "train_weights_ft = [1 if ft == 'T' else downsize_factor_ft for ft in train_ft['FT']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7175792507204611"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()), ('clf', MultinomialNB())])\n",
-    "text_clf.fit(train_ft['posts'], train_ft['FT'], **{'clf__sample_weight': train_weights_ft})  \n",
-    "predicted_ft = text_clf.predict(dev_ft['posts'])\n",
-    "np.mean(predicted_ft == dev_ft['FT'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1 score FT\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.67506631, 0.75025484])"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"f1 score FT\")\n",
-    "f1_score(dev_ft['FT'], predicted_ft, labels=['F', 'T'], average=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "downsize_factor_pj = sum(train_pj['PJ'] == 'J')/len(train_pj['PJ'])\n",
-    "train_weights_pj = [1 if pj == 'J' else downsize_factor_pj for pj in train_pj['PJ']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4795389048991354"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()), ('clf', MultinomialNB())])\n",
-    "text_clf.fit(train_pj['posts'], train_pj['PJ'], **{'clf__sample_weight': train_weights_pj})  \n",
-    "predicted_pj = text_clf.predict(dev_pj['posts'])\n",
-    "np.mean(predicted_pj == dev_pj['PJ'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1 score PJ\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.312262, 0.581363])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"f1 score PJ\")\n",
-    "f1_score(dev_pj['PJ'], predicted_pj, labels=['P', 'J'], average=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1735,)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_pj.shape"
+    "predicted_pj = pipeline.predict(dev_pj['posts'])\n",
+    "print(\"PJ accuracy\", np.mean(predicted_pj == dev_pj['PJ']))"
    ]
   },
   {
@@ -879,9 +627,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "f1 score IE [0.         0.38754647]\n",
+      "f1 score NS [0.         0.21777093]\n",
+      "f1 score FT [0.        0.6333202]\n",
+      "f1 score PJ [0.         0.56076317]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/BrandonLiu/anaconda3/envs/nlu/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "print(\"f1 score IE\", f1_score(dev_ie['IE'], predicted_ie, labels=['I', 'E'], average=None))\n",
+    "\n",
+    "print(\"f1 score NS\", f1_score(dev_ns['NS'], predicted_ns, labels=['N', 'S'], average=None))\n",
+    "\n",
+    "print(\"f1 score FT\", f1_score(dev_ft['FT'], predicted_ft, labels=['F', 'T'], average=None))\n",
+    "\n",
+    "print(\"f1 score PJ\", f1_score(dev_pj['PJ'], predicted_pj, labels=['P', 'J'], average=None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with 1st, 2nd, 3rd person, countvec\n",
+    "\n",
+    "#IE accuracy: .247\n",
+    "#NS accuracy: .346\n",
+    "#FT accuracy: 0.494\n",
+    "#PJ accuracy 0.390\n",
+    "\n",
+    "# f1 score IE [0.01950488 0.38839495]\n",
+    "# f1 score NS [0.43072289 0.23274696]\n",
+    "# f1 score FT [0.12723658 0.64366883]\n",
+    "# f1 score PJ [0.         0.56076317]\n",
+    "\n",
+    "# bigrams: identical numbers\n",
+    "#IE accuracy: .247\n",
+    "#NS accuracy: .346\n",
+    "#FT accuracy: 0.494\n",
+    "#PJ accuracy 0.390\n",
+    "\n",
+    "\n",
+    "# using avg post length deviations and count vec(no 1st, 2nd, 3rd): yah\n",
+    "# yah\n",
+    "# IE accuracy 0.2426512968299712\n",
+    "# yah\n",
+    "# yah\n",
+    "# NS accuracy 0.22074927953890489\n",
+    "# yah\n",
+    "# yah\n",
+    "# FT accuracy 0.47723342939481267\n",
+    "# yah\n",
+    "# yah\n",
+    "# PJ accuracy 0.38962536023054756\n",
+    "\n",
+    "\n",
+    "# f1 score IE [0.00605144 0.38826816]\n",
+    "# f1 score NS [0.20935673 0.23181818]\n",
+    "# f1 score FT [0.05026178 0.63936382]\n",
+    "# f1 score PJ [0.         0.56076317]\n",
+    "\n",
+    "# using avg post length deviations, count vec, 1st, 2nd, 3rd with bigrams, unigrams\n",
+    "#IE accuracy: .240\n",
+    "#NS accuracy: .122\n",
+    "#FT accuracy: .463\n",
+    "#PJ accuracy: .390\n",
+    "\n",
+    "# f1 score IE [0.         0.38754647]\n",
+    "# f1 score NS [0.         0.21777093]\n",
+    "# f1 score FT [0.        0.6333202]\n",
+    "# f1 score PJ [0.         0.56076317]\n",
+    "\n",
+    "# Prediction distribution\n",
+    "# Counter({'E': 1735})\n",
+    "# Counter({'S': 1735})\n",
+    "# Counter({'T': 1735})\n",
+    "# Counter({'J': 1735})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Frequency of unique values of the said array:\n",
-      "[['E' 'I']\n",
-      " ['1094' '641']]\n"
+      "[['E']\n",
+      " [1735]]\n"
      ]
     }
    ],
@@ -893,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -916,10 +761,10 @@
       "\n",
       "\n",
       "Prediction distribution\n",
-      "Counter({'E': 1094, 'I': 641})\n",
-      "Counter({'N': 1107, 'S': 628})\n",
-      "Counter({'T': 1158, 'F': 577})\n",
-      "Counter({'J': 1481, 'P': 254})\n"
+      "Counter({'E': 1735})\n",
+      "Counter({'S': 1735})\n",
+      "Counter({'T': 1735})\n",
+      "Counter({'J': 1735})\n"
      ]
     }
    ],
